feat: 全面代码质量优化（18项改进）
安全加固:
- Token认证迁移至HttpOnly Cookie (Sa-Token cookie模式)
- 新增LoginAttemptService账户锁定机制 (5次失败/15分钟)
- XSS过滤器JSON解析失败时丢弃请求体
- GlobalSearch highlightText添加HTML实体编码防XSS
- WebSocket添加连接数限制(100)、消息限流(10/min)、空闲超时(5min)
- 所有Controller添加@Operation Swagger注解 (136个)

性能优化:
- PopularityAsyncService添加@Async异步化浏览量更新
- BrowseHistoryServiceImpl修复N+1查询 (selectBatchIds批量加载)
- TwoLevelCache添加缓存击穿防护 (ConcurrentHashMap锁+double-check)
- Element Plus按需导入 (JS包803KB→489KB, 减少39%)

架构改进:
- 新建LeaderboardService/StatisticsService提取Controller业务逻辑
- 新建LoginAttemptService账户锁定服务
- Admin form对话框使用useFormDialog composable消除重复代码
- AdminContentController添加listPaged辅助方法
- 前端新建src/api/统一API层 (18个模块)
- 3个composable迁移至API层 (useFavorite/useBrowseHistory/useQuiz)

测试与CI:
- 后端添加JaCoCo覆盖率插件 (pom.xml)
- 前端Vitest添加lcov reporter, 覆盖范围扩展至stores
- CI添加SonarQube扫描job和覆盖率artifact上传
- 新增4个Vue组件测试 (CommentSection/QuizSection/PlantGame/GlobalSearch)
- CI添加E2E测试job (Playwright chromium)
- Dockerfile修复mysql-client→mariadb-client (Alpine兼容)

文档更新:
- 论文/PPT/答辩稿同步更新认证机制(HttpOnly Cookie)、测试数量、Service数量等

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>