@@ -2,7 +2,6 @@ package com.dongmedicine.controller;
 
 import com.dongmedicine.common.R;
 import com.dongmedicine.common.SecurityUtils;
-import com.dongmedicine.mapper.*;
 import com.dongmedicine.service.*;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
@@ -26,7 +25,7 @@ import static org.mockito.Mockito.*;
 class StatisticsControllerTest {
 
     @Mock
-    private OperationLogService logService;
+    private StatisticsService statisticsService;
 
     @Mock
     private PlantService plantService;
@@ -42,21 +41,6 @@ class StatisticsControllerTest {
 
     @Mock
     private ResourceService resourceService;
-
-    @Mock
-    private PlantMapper plantMapper;
-
-    @Mock
-    private KnowledgeMapper knowledgeMapper;
-
-    @Mock
-    private InheritorMapper inheritorMapper;
-
-    @Mock
-    private QaMapper qaMapper;
-
-    @Mock
-    private ResourceMapper resourceMapper;
 
     @InjectMocks
     private StatisticsController statisticsController;
@@ -77,12 +61,12 @@ class StatisticsControllerTest {
     @Test
     @DisplayName("数据概览 - 成功")
     void testGetOverview_Success() {
-        when(plantMapper.selectCount(isNull())).thenReturn(10L);
-        when(knowledgeMapper.selectCount(isNull())).thenReturn(20L);
-        when(inheritorMapper.selectCount(isNull())).thenReturn(5L);
-        when(qaMapper.selectCount(isNull())).thenReturn(15L);
-        when(resourceMapper.selectCount(isNull())).thenReturn(8L);
-        when(knowledgeMapper.countDistinctTherapyCategory()).thenReturn(3);
+        Map<String, Object> overview = new LinkedHashMap<>();
+        overview.put("plants", 10L);
+        overview.put("formulas", 20L);
+        overview.put("inheritors", 5L);
+        overview.put("therapies", 3);
+        when(statisticsService.getOverview()).thenReturn(overview);
 
         R<Map<String, Object>> result = statisticsController.getOverview();
 
@@ -97,53 +81,19 @@ class StatisticsControllerTest {
     @Test
     @DisplayName("图表数据 - 成功")
     void testGetChartData_Success() {
-        when(plantMapper.selectCount(isNull())).thenReturn(10L);
-        when(knowledgeMapper.selectCount(isNull())).thenReturn(20L);
-        when(inheritorMapper.selectCount(isNull())).thenReturn(5L);
-        when(qaMapper.selectCount(isNull())).thenReturn(15L);
-        when(resourceMapper.selectCount(isNull())).thenReturn(8L);
-
-        List<Map<String, Object>> therapyCategories = new ArrayList<>();
-        Map<String, Object> tc = new LinkedHashMap<>();
-        tc.put("name", "推拿");
-        tc.put("value", 5);
-        therapyCategories.add(tc);
-        when(knowledgeMapper.countByTherapyCategory(8)).thenReturn(therapyCategories);
-
-        when(inheritorMapper.countByLevel("国家级")).thenReturn(2);
-        when(inheritorMapper.countByLevel("省级")).thenReturn(3);
-        when(inheritorMapper.countByLevel("市级")).thenReturn(1);
-        when(inheritorMapper.countByLevel("县级")).thenReturn(0);
-
-        List<Map<String, Object>> plantCategories = new ArrayList<>();
-        Map<String, Object> pc = new LinkedHashMap<>();
-        pc.put("name", "清热药");
-        pc.put("value", 8L);
-        plantCategories.add(pc);
-        when(plantMapper.countByCategory(8)).thenReturn(plantCategories);
-
-        List<Map<String, Object>> qaCategories = new ArrayList<>();
-        Map<String, Object> qc = new LinkedHashMap<>();
-        qc.put("name", "用药");
-        qc.put("value", 10L);
-        qaCategories.add(qc);
-        when(qaMapper.topCategoryByPopularity(6)).thenReturn(qaCategories);
-
-        when(plantMapper.countByDistribution(100)).thenReturn(Collections.emptyList());
-
-        List<Map<String, Object>> knowledgePop = new ArrayList<>();
-        Map<String, Object> kp = new LinkedHashMap<>();
-        kp.put("name", "侗药");
-        kp.put("value", 100);
-        knowledgePop.add(kp);
-        when(knowledgeMapper.topByPopularity(10)).thenReturn(knowledgePop);
-
-        List<Map<String, Object>> formulaData = new ArrayList<>();
-        Map<String, Object> fd = new LinkedHashMap<>();
-        fd.put("name", "药方");
-        fd.put("value", 50L);
-        formulaData.add(fd);
-        when(knowledgeMapper.topFormulaByViewCount(8)).thenReturn(formulaData);
+        Map<String, Object> chartData = new LinkedHashMap<>();
+        chartData.put("counts", Map.of("plants", 10L));
+        chartData.put("therapyCategories", Collections.emptyList());
+        chartData.put("inheritorLevels", List.of(2, 3, 1, 0));
+        chartData.put("plantCategoryNames", List.of("清热药"));
+        chartData.put("plantCategories", List.of(8L));
+        chartData.put("qaCategoryNames", List.of("用药"));
+        chartData.put("qaCategories", List.of(10L));
+        chartData.put("plantDistribution", Collections.emptyList());
+        chartData.put("knowledgePopularity", Collections.emptyList());
+        chartData.put("formulaNames", List.of("药方"));
+        chartData.put("formulaFreq", List.of(50L));
+        when(statisticsService.getChartData()).thenReturn(chartData);
 
         R<Map<String, Object>> result = statisticsController.getChartData();
 
@@ -163,35 +113,23 @@ class StatisticsControllerTest {
     @Test
     @DisplayName("图表数据 - 药方数据为空时回退到topByViewCount")
     void testGetChartData_FormulaFallback() {
-        when(plantMapper.selectCount(isNull())).thenReturn(0L);
-        when(knowledgeMapper.selectCount(isNull())).thenReturn(0L);
-        when(inheritorMapper.selectCount(isNull())).thenReturn(0L);
-        when(qaMapper.selectCount(isNull())).thenReturn(0L);
-        when(resourceMapper.selectCount(isNull())).thenReturn(0L);
-        when(knowledgeMapper.countByTherapyCategory(8)).thenReturn(Collections.emptyList());
-        when(inheritorMapper.countByLevel("国家级")).thenReturn(0);
-        when(inheritorMapper.countByLevel("省级")).thenReturn(0);
-        when(inheritorMapper.countByLevel("市级")).thenReturn(0);
-        when(inheritorMapper.countByLevel("县级")).thenReturn(0);
-        when(plantMapper.countByCategory(8)).thenReturn(Collections.emptyList());
-        when(qaMapper.topCategoryByPopularity(6)).thenReturn(Collections.emptyList());
-        when(plantMapper.countByDistribution(100)).thenReturn(Collections.emptyList());
-        when(knowledgeMapper.topByPopularity(10)).thenReturn(Collections.emptyList());
-
-        when(knowledgeMapper.topFormulaByViewCount(8)).thenReturn(Collections.emptyList());
-
-        List<Map<String, Object>> fallbackData = new ArrayList<>();
-        Map<String, Object> fb = new LinkedHashMap<>();
-        fb.put("name", "知识");
-        fb.put("value", 30L);
-        fallbackData.add(fb);
-        when(knowledgeMapper.topByViewCount(8)).thenReturn(fallbackData);
+        Map<String, Object> chartData = new LinkedHashMap<>();
+        chartData.put("counts", Map.of());
+        chartData.put("therapyCategories", Collections.emptyList());
+        chartData.put("inheritorLevels", List.of(0, 0, 0, 0));
+        chartData.put("plantCategoryNames", Collections.emptyList());
+        chartData.put("plantCategories", Collections.emptyList());
+        chartData.put("qaCategoryNames", Collections.emptyList());
+        chartData.put("qaCategories", Collections.emptyList());
+        chartData.put("plantDistribution", Collections.emptyList());
+        chartData.put("knowledgePopularity", Collections.emptyList());
+        chartData.put("formulaNames", List.of("知识"));
+        chartData.put("formulaFreq", List.of(30L));
+        when(statisticsService.getChartData()).thenReturn(chartData);
 
         R<Map<String, Object>> result = statisticsController.getChartData();
 
         assertEquals(200, result.getCode());
-        verify(knowledgeMapper).topFormulaByViewCount(8);
-        verify(knowledgeMapper).topByViewCount(8);
     }
 
     @Test
@@ -200,13 +138,18 @@ class StatisticsControllerTest {
         DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
         String today = LocalDate.now().format(formatter);
 
-        List<Map<String, Object>> dbData = new ArrayList<>();
-        Map<String, Object> row = new LinkedHashMap<>();
-        row.put("date", today);
-        row.put("count", 42);
-        dbData.add(row);
-
-        when(logService.getTrendLast7Days()).thenReturn(dbData);
+        List<String> dates = new ArrayList<>();
+        List<Long> counts = new ArrayList<>();
+        DateTimeFormatter displayFormatter = DateTimeFormatter.ofPattern("M/d");
+        for (int i = 6; i >= 0; i--) {
+            LocalDate date = LocalDate.now().minusDays(i);
+            dates.add(date.format(displayFormatter));
+            counts.add(date.format(formatter).equals(today) ? 42L : 0L);
+        }
+        Map<String, Object> trendData = new LinkedHashMap<>();
+        trendData.put("dates", dates);
+        trendData.put("counts", counts);
+        when(statisticsService.getVisitTrend()).thenReturn(trendData);
 
         R<Map<String, Object>> result = statisticsController.getVisitTrend();
 
@@ -215,23 +158,33 @@ class StatisticsControllerTest {
         assertTrue(result.getData().containsKey("dates"));
         assertTrue(result.getData().containsKey("counts"));
 
-        List<String> dates = (List<String>) result.getData().get("dates");
-        List<Long> counts = (List<Long>) result.getData().get("counts");
-        assertEquals(7, dates.size());
-        assertEquals(7, counts.size());
+        List<String> resultDates = (List<String>) result.getData().get("dates");
+        List<Long> resultCounts = (List<Long>) result.getData().get("counts");
+        assertEquals(7, resultDates.size());
+        assertEquals(7, resultCounts.size());
     }
 
     @Test
     @DisplayName("访问趋势 - 空数据")
     void testGetVisitTrend_Empty() {
-        when(logService.getTrendLast7Days()).thenReturn(Collections.emptyList());
+        List<String> dates = new ArrayList<>();
+        List<Long> counts = new ArrayList<>();
+        DateTimeFormatter displayFormatter = DateTimeFormatter.ofPattern("M/d");
+        for (int i = 6; i >= 0; i--) {
+            dates.add(LocalDate.now().minusDays(i).format(displayFormatter));
+            counts.add(0L);
+        }
+        Map<String, Object> trendData = new LinkedHashMap<>();
+        trendData.put("dates", dates);
+        trendData.put("counts", counts);
+        when(statisticsService.getVisitTrend()).thenReturn(trendData);
 
         R<Map<String, Object>> result = statisticsController.getVisitTrend();
 
         assertEquals(200, result.getCode());
-        List<Long> counts = (List<Long>) result.getData().get("counts");
-        assertEquals(7, counts.size());
-        assertTrue(counts.stream().allMatch(c -> c == 0L));
+        List<Long> resultCounts = (List<Long>) result.getData().get("counts");
+        assertEquals(7, resultCounts.size());
+        assertTrue(resultCounts.stream().allMatch(c -> c == 0L));
     }
 
     @Test
